--- a/categorias/noticias/COVID-19/sintomas-del-coronavirus-y-como-identificarlo.html
+++ b/categorias/noticias/COVID-19/sintomas-del-coronavirus-y-como-identificarlo.html
@@ -9,12 +9,14 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width-device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="icon" href="/images/amym-icon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/images/amym-icon.ico">
+    <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <link rel="shortcut icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/icons/ayam-favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-web-app-title" content="COVID-19, ¿Cuales Son Sus Síntomas e Identificarlo?">
     <title>COVID-19, ¿Cuales Son Sus Síntomas e Identificarlo?</title>
     <meta name="title" content="COVID-19, ¿Cuales Son Sus Síntomas e Identificarlo?">
@@ -22,7 +24,7 @@
     <meta name="keywords" content="blog, artículos, noticias, entretenimiento, memes">
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html">
     <meta name="language" content="Spanish">
     <meta name="author" content="https://instagram.com/thianandre">
     <meta property="fb:app_id" content="807980679724387">
@@ -64,6 +66,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-158187435-1');
+
     </script>
     <!-- END Global site tag (gtag.js) - Google Analytics -->
 
@@ -184,10 +187,10 @@
                                 </div>
                             </div>
                             <p>Personas con un sistema inmiune débil son más propensas a contraer el virus, en ancianos y jóvenes existe la posibilidad de que el virus pueda causas enfermedades graves relacionadas al tracto respiratorio superior como bronquitis o neumonía.</p>
-                            <p>Entre los tipos de coronavirus  se encuentran:</p>
+                            <p>Entre los tipos de coronavirus se encuentran:</p>
                             <ul>
-                            <li><strong>EL síndrome respiratorio del Medio Oriente</strong> también conocido como virus <a href="" target="_blank" rel="nofollow">MERS</a>a>.</li>
-                            <li><strong>EL síndrome respiratorio agudo severo</strong> también conocido como virus <a href="" target="_blank" rel="nofollow">SARS</a>, es otro coronavirus pero este causa síntomas más graves. Puede causar fatiga, diarrea, dificultad respiratoria e insuficiencia renal.</li>
+                                <li><strong>EL síndrome respiratorio del Medio Oriente</strong> también conocido como virus <a href="" target="_blank" rel="nofollow">MERS</a>a>.</li>
+                                <li><strong>EL síndrome respiratorio agudo severo</strong> también conocido como virus <a href="" target="_blank" rel="nofollow">SARS</a>, es otro coronavirus pero este causa síntomas más graves. Puede causar fatiga, diarrea, dificultad respiratoria e insuficiencia renal.</li>
                             </ul>
                             <p>Se cree que el coronavirus actual es más leve que el MERS y el SARS, Los pacientes diagnosticados con el virus han experimentado tos leve y dificultad para respirar, al rededor del 18% de los casos se han vuelto graves y han requerido ventilación.</p>
                             <h3>Propagación:</h3>
@@ -424,6 +427,7 @@
                             Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>
                                 document.write(new Date().getFullYear());
+
                             </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
                             <!-- END Copyright -->
 
@@ -442,9 +446,10 @@
     </div>
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="50px" height="50px">
+    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div> <!-- END loader -->
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
+    <!-- END loader -->
 
     <script src="/js/jquery-3.2.1.min.js"></script>
     <script src="/js/jquery-migrate-3.0.0.js"></script>
@@ -456,4 +461,7 @@
 
 
     <script src="/js/main.js"></script>
-</body></html>
+    <script src="/script.js"></script>
+</body>
+
+</html>
